--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
