--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "coinbase": "^2.0.8",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
