--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "coinbase": "^2.0.8",
+    "cryptocurrency-icons": "^0.18.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.13",
     "request": "^2.88.2",
