--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.17.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
