--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
