--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "colorthief": "^2.3.2",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.17.1",
+    "react-hook-form": "^7.20.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-select": "^5.1.0",
+    "react-select": "^5.2.1",
+    "url-parse": "^1.5.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
