--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.13",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
