--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "colorthief": "^2.3.2",
     "immer": "^9.0.7",
+    "lottie-react": "^2.1.0",
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
     "react-lottie": "^1.2.3",
+    "react-lottie-segments": "^1.4.9",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
