--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8000/",
+  "proxy": "https://dev-pwc.herokuapp.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
