--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "colorthief": "^2.3.2",
+    "dotenv": "^10.0.0",
     "immer": "^9.0.7",
     "lottie-react": "^2.1.0",
     "nth-check": "^2.0.1",
