--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,9 @@
     "react-lottie": "^1.2.3",
     "react-lottie-segments": "^1.4.9",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
-    "url-parse": "^1.5.3",
+    "url-parse": "^1.5.8",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
